[project]
name = "geodist"
version = "0.0.1"
authors = [{ name: "Harsh Panchal" }]
readme = "README.md"
# license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]